clusters/talos-robbinsdale/apps/media/app/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: tv-volume
              mountPath: /tv
            - name: downloads-sabnzbd-volume
              mountPath: /downloads/sabnzbd
            - name: downloads-qbittorrent-volume
              mountPath: /downloads/qbittorrent
            - name: config-volume
              mountPath: /config
      volumes:
        - name: tv-volume
          persistentVolumeClaim:
            claimName: sonarr-tv-unas
        - name: downloads-volume
          persistentVolumeClaim:
            claimName: transmission-tv-data-unas
        - name: config-volume
          persistentVolumeClaim:
            claimName: sonarr-config-ceph # TODO: move to UNAS
