clusters/talos-robbinsdale/apps/media/app/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - name: http
    port: 8989
    protocol: TCP
    targetPort: 8989
  type: ClusterIP
