clusters/talos-robbinsdale/apps/media/app/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: envoy-gateway-system
  hostnames:
    - "sonarr.rajsingh.info"
    - "sonarr.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          port: 8989
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
